--- a/tools/jsdoc/hifi-jsdoc-template/tmpl/params.tmpl
+++ b/tools/jsdoc/hifi-jsdoc-template/tmpl/params.tmpl
@@ -120,7 +120,7 @@
                 </td>
             <?js } ?>
 
-            <td class="description last"><?js= param.description ?><?js if (param.subparams) { ?>
+            <td class="description last"><p><?js= param.description ?></p><?js if (param.subparams) { ?>
                 <h6>Properties</h6>
                 <?js= self.partial('params.tmpl', param.subparams) ?>
             <?js } ?></td>
