--- a/tools/jsdoc/hifi-jsdoc-template/tmpl/method.tmpl
+++ b/tools/jsdoc/hifi-jsdoc-template/tmpl/method.tmpl
@@ -13,10 +13,7 @@ var self = this;
                         <?js returns.forEach(function(r) { ?>
                             <?js= self.partial('returns.tmpl', r) ?>
                         <?js });
-                    } ?></span>
-                    <?js if (data.kind === 'typedef' && data.type && data.type.names) { ?>
-                        <br />Type: <?js= self.partial('type.tmpl', data.type.names) ?>
-                    <?js } ?>
+                    } ?></span>           
                 </th>
             </tr>
         </thead>
@@ -24,13 +21,9 @@ var self = this;
             <tr>
                 <td>
                     <?js if (data.kind !== 'module' && !data.hideconstructor) { ?>
-                        <p>
-                            <?js= data.description ?>
-                            <?js= this.partial('details.tmpl', data) ?>
-                        </p>
+                        <?js= this.partial('memberDetails.tmpl', data) ?>
                     <?js } else { ?>
-                        <p style="color:red;">&nbsp;</p>
-                    <?js } ?>                    
+                    <?js } ?>   
 
                     <?js if (data.exceptions && exceptions.length) { ?>
                     <h3 class="subHeading">Throws:</h3>
@@ -66,7 +59,7 @@ var self = this;
     <?js= self.partial('augments.tmpl', data) ?>
 <?js } ?>
 
-<?js if (data.kind === 'event' && data.type && data.type.names) {?>
+<?js if (kind === 'event' && data.type && data.type.names) {?>
     <h5>Type:</h5>
     <ul>
         <li>
